{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 225,
  "lineage": "5bdfd615-4cea-9579-edb2-53e9b6926cce",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "apache2_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/apache2-ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "gce"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "apache2-ingress",
                "namespace": "default",
                "resource_version": "3108",
                "self_link": "",
                "uid": "5fd66c01-94ab-4eda-9867-0a840ec5154b"
              }
            ],
            "spec": [
              {
                "backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "koho.rescuityonline.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "service_name": "apache2",
                                "service_port": "8080"
                              }
                            ],
                            "path": "/*"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [
                      "koho.rescuityonline.com"
                    ],
                    "secret_name": "koho-tls"
                  }
                ]
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "34.117.254.56"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_secret.tls",
            "kubernetes_service.apache2",
            "data.google_client_config.provider",
            "data.google_container_cluster.main-zone",
            "kubernetes_deployment.apache2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "myadminingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/myadmin-ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "gce"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "myadmin-ingress",
                "namespace": "default",
                "resource_version": "5266",
                "self_link": "",
                "uid": "e9dc082d-678c-483a-b76b-d72eab5be0eb"
              }
            ],
            "spec": [
              {
                "backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "kohomyadmin.rescuityonline.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "service_name": "phpmyadmin",
                                "service_port": "8080"
                              }
                            ],
                            "path": "/*"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [
                      "kohomyadmin.rescuityonline.com"
                    ],
                    "secret_name": "kohomyadmin-tls"
                  }
                ]
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "34.117.29.114"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_service.phpmyadmin",
            "data.google_client_config.provider",
            "data.google_container_cluster.main-zone",
            "kubernetes_deployment.phpmyadmin",
            "kubernetes_secret.mariadb-phpmyadmin",
            "kubernetes_secret.myadmin_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "apache2",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/apache2",
            "metadata": [
              {
                "generation": 0,
                "name": "apache2",
                "namespace": "default",
                "resource_version": "11969",
                "uid": "3658653a-a235-4ccd-a875-51ff88c50f5b"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.23.103.224",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "port": [
                  {
                    "name": "apache2",
                    "node_port": 32420,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "apache2"
                },
                "session_affinity": "ClientIP",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.provider",
            "data.google_container_cluster.main-zone",
            "kubernetes_deployment.apache2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "phpmyadmin",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/phpmyadmin",
            "metadata": [
              {
                "generation": 0,
                "name": "phpmyadmin",
                "namespace": "default",
                "resource_version": "11855",
                "uid": "eea33990-bea0-4674-b063-e6648b69a672"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.23.110.211",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "port": [
                  {
                    "name": "phpmyadmin",
                    "node_port": 31085,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "phpmyadmin"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.provider",
            "data.google_container_cluster.main-zone",
            "kubernetes_deployment.phpmyadmin"
          ]
        }
      ]
    }
  ]
}